--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <script src="index.js"></script>
-        <link rel="stylrsheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
+        <div id="data-grid">
+            
+        </div>
+           
     </body>
 </html>
